...
        app:layout_constraintBottom_toBottomOf="@id/item_room_icon"
        app:layout_constraintEnd_toEndOf="@id/item_room_icon"
        app:layout_constraintStart_toStartOf="@id/item_room_icon"
        app:layout_constraintTop_toTopOf="@id/item_room_icon" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
...
