...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_edit_calendar_24"
        app:startIconTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

...
